--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,38 +24,35 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
 
-    //Android Support Library
+
+
+
+
+
+
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:customtabs:25.3.1'
-
-    //Android Room Persistence Library
+    compile 'android.arch.lifecycle:extensions:1.0.0-alpha3'
     compile 'android.arch.persistence.room:runtime:1.0.0-alpha3'
-    annotationProcessor 'android.arch.persistence.room:compiler:1.0.0-alpha3'
-
-    //Butterknife, for resource binding
     compile 'com.jakewharton:butterknife:8.6.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
-
-    //Glide, for image loading
     compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC1'
     compile 'com.github.florent37:glidepalette:2.0.1'
-
-    //Retrofit, for consuming API
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
-
-    // RxJava and RxAndroid, for reactive programming implementation
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.0'
-
-    //Loading animation
     compile 'com.wang.avi:library:2.1.3'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:support-v4:25.3.1'
+    testCompile 'junit:junit:4.12'
+    annotationProcessor 'android.arch.lifecycle:compiler:1.0.0-alpha3'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.0.0-alpha3'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC1'
 }
