--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,7 @@ dependencies {
     annotationProcessor 'android.arch.persistence.room:compiler:1.0.0-alpha3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC1'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+
 }
