--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".modul.step.StepActivity" />
 
         <receiver android:name=".modul.widget.RecipeWidget">
             <intent-filter>
@@ -31,8 +30,6 @@
                 android:resource="@xml/recipe_widget_info" />
         </receiver>
 
-        <activity android:name=".modul.step.StepActivity" />
-
         <provider
             android:name=".data.source.local.db.RecipeContentProvider"
             android:authorities="com.irfankhoirul.recipe"
@@ -40,7 +37,9 @@
             android:permission="com.irfankhoirul.recipe.data.source.local.db.READ_WRITE" />
 
         <activity android:name=".modul.step_detail.StepDetailActivity" />
-        <activity android:name=".modul.recipe_detail.RecipeDetailActivity"></activity>
+        <activity
+            android:name=".modul.recipe_detail.RecipeDetailActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
